feat: generate service
