# src/services/pledge/api/index.ts
@@ -1,0 +1,12 @@
+// @ts-ignore
+/* eslint-disable */
+// API 更新时间：
+// API 唯一标识：
+import * as lockedCountdown from './lockedCountdown';
+import * as txsHistory from './txsHistory';
+import * as addTx from './addTx';
+export default {
+  lockedCountdown,
+  txsHistory,
+  addTx,
+};
